[gd_scene load_steps=3 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://scenes/camera.gd" type="Script" id=2]

[node name="camera" type="Spatial"]
script = ExtResource( 2 )
camera_distance_min = 15
tof_camera_distance_min = 15
aw_camera_distance_min = 15

[node name="pivot" type="Spatial" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )

[node name="arm" type="Spatial" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="lens" type="Camera" parent="pivot/arm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30 )
environment = ExtResource( 1 )
current = true
fov = 50.0
size = 65.0
far = 200.0

[node name="tof_pivot" type="Spatial" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )

[node name="tof_arm" type="Spatial" parent="tof_pivot"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0 )

[node name="tof_style_camera" type="Camera" parent="tof_pivot/tof_arm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 2.98023e-08, 1, 0, 0, 50 )
projection = 1
current = true
size = 40.0
far = 200.0

[node name="aw_pivot" type="Spatial" parent="."]

[node name="aw_arm" type="Spatial" parent="aw_pivot"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="aw_style_camera" type="Camera" parent="aw_pivot/aw_arm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 2.98023e-08, 1, 0, 0, 50 )
projection = 1
size = 40.0
far = 200.0
